# MechatronixPID

./: .gitignore  README.md  launch.py
controller/: README.md  pid_controller.cpp  pid_controller.hpp  pid_params.cpp  pid_params.hpp  scion  scion_pid_controller.cpp  scion_pid_controller.hpp
dummy_brain/: CMakeLists.txt  package.xml
dummy_brain/src/: dummy_brain.cpp
dummy_sensor/: CMakeLists.txt  package.xml
dummy_sensor/src/: dummy_sensor.cpp
helpers/: vector_operations.hpp  vector_operations_old.cpp  vector_operations_old.hpp
install/: local_setup.sh  setup.sh
install/dummy_brain/lib/dummy_brain/: dummy_brain
linker_studying/: hello_world.cpp  hello_world.hpp  main.cpp  test  test.cpp
log/: latest_build
pid_controller/: CMakeLists.txt
pid_controller/include/: pid_params.hpp  scion_pid_controller.hpp
pid_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pid_controller/install/pid_controller/lib/pid_controller/: pid_controller
pid_controller/install/pid_controller/share/pid_controller/: local_setup.sh  package.dsv  package.ps1  package.sh
pid_controller/install/pid_controller/share/pid_controller/cmake/: pid_controllerConfig.cmake
pid_controller/log/: latest_build
pid_controller/src/: README.md  pid_controller.cpp  pid_controller.hpp  pid_controller_node.cpp  pid_params.cpp  scion  scion_pid_controller.cpp  scion_pid_controller.hpp
pid_controller/src/install/: local_setup.sh  setup.sh
pid_controller/src/log/: latest_build
robot_types/: CMakeLists.txt
robot_types/msg/: Position.msg
(+29 files in other folders)
